--- a/client/index.html
+++ b/client/index.html
@@ -14,9 +14,9 @@
 	</header>
 	<main>
 		<form class="mew-form">
-			<label for="name">Name</label>
+			<label for="name">username</label>
 			<input class="u-full-width" type="text" id="name" name="name">
-			<label for="content">Mew</label>
+			<label for="content">tweet</label>
 			<textarea class="u-full-width" type="text" id="content" name="content"></textarea>
 			<button class="button-primary">Send your tweet</button>
 		</form>
