--- a/client/index.html
+++ b/client/index.html
@@ -20,11 +20,14 @@
 			<textarea class="u-full-width" type="text" id="content" name="content"></textarea>
 			<button class="button-primary">Send your tweet</button>
 		</form>
-		<div class="loading">
-			<img src="loading.gif" alt="">
-		</div>
 		<div class="mews">
 			
+		</div>
+		<div class="button-container">
+			<p id="loadMore">Loading...</p>
+		</div>
+		<div class="loading">
+			<img src="loading.gif" alt="">
 		</div>
 	</main>
 	<script src="client.js"></script>
