--- a/client/index.html
+++ b/client/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Twitter clone</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Tweeker</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<header>
-		<h1 class="title">Twitter clone in works</h1>
-	</header>
-	<main>
-		<form class="mew-form">
-			<label for="name">username</label>
-			<input class="u-full-width" type="text" id="name" name="name">
-			<label for="content">tweet</label>
-			<textarea class="u-full-width" type="text" id="content" name="content"></textarea>
-			<button class="button-primary">Send your tweet</button>
-		</form>
-		<div class="mews">
-			
-		</div>
-		<div class="button-container">
-			<p id="loadMore">Loading...</p>
-		</div>
-		<div class="loading">
-			<img src="loading.gif" alt="">
-		</div>
-	</main>
-	<script src="client.js"></script>
+  <header>
+    <h1 class="title">Twotter 🙉</h1>
+  </header>
+  <main>
+    <form class="twot-form">
+      <div class="error-message">
+      </div>
+      <label for="name">Twot Name 🐵</label>
+      <input class="u-full-width" type="text" id="name" name="name">
+      <label for="content">What happened?! 🙊</label>
+      <textarea class="u-full-width" type="text" id="content" name="content"></textarea>
+      <button class="button-primary">Toot Twot!! 🙈</button>
+    </form>
+    <div class="twots">
+
+    </div>
+    <div class="button-container">
+      <p id="loadMore">Loading...</p>
+    </div>
+    <div class="loading">
+      <img src="loading.gif" alt="">
+    </div>
+  </main>
+  <script src="client.js"></script>
 </body>
 </html>
